fixing pagination spacing on the archives page
Fixes #485

--- a/css/less/theme-responsive.less
+++ b/css/less/theme-responsive.less
@@ -98,6 +98,7 @@
 
 		.previous {
 			margin-bottom: 20px;
+			display: inline-block;
 		}
 
 	}
